--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculator App</title>
   <style>
+    /* Basic Styles */
     body {
       font-family: Arial, sans-serif;
       display: flex;
@@ -12,80 +13,192 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background-color: #f0f0f0;
+      background-color: #f3f3f3;
     }
-
     .calculator {
       width: 300px;
-      background-color: white;
+      padding: 20px;
+      background: #fff;
       border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
 
     .display {
+      width: 100%;
       height: 60px;
-      background: #eaeaea;
-      display: flex;
-      align-items: center;
-      justify-content: flex-end;
-      font-size: 2rem;
+      background-color: #333;
+      color: #fff;
+      font-size: 24px;
+      text-align: right;
       padding: 10px;
+      border-radius: 5px;
+      margin-bottom: 15px;
       box-sizing: border-box;
     }
 
     .buttons {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
+      gap: 10px;
     }
 
     button {
-      height: 70px;
-      font-size: 1.2rem;
-      border: 1px solid #ddd;
-      background-color: #f9f9f9;
+      height: 60px;
+      font-size: 18px;
+      border: none;
+      border-radius: 5px;
+      background-color: #ededed;
+      color: #333;
       cursor: pointer;
-      transition: background-color 0.2s;
     }
 
-    button.operation {
-      background-color: #ffc107;
+    button:active {
+      background-color: #ddd;
     }
 
-    button.equals {
-      background-color: #28a745;
+    .operator {
+      background-color: #f9a825;
       color: white;
     }
 
-    button:hover {
-      background-color: #ddd;
+    .equals {
+      background-color: #4CAF50;
+      color: white;
     }
   </style>
 </head>
 <body>
-
   <div class="calculator">
-    <div id="display" class="display"></div>
+    <div class="display" id="display">0</div>
     <div class="buttons">
-      <button onclick="append('7')">7</button>
-      <button onclick="append('8')">8</button>
-      <button onclick="append('9')">9</button>
-      <button onclick="selectOperation('/')">÷</button>
-      <button onclick="append('4')">4</button>
-      <button onclick="append('5')">5</button>
-      <button onclick="append('6')">6</button>
-      <button onclick="selectOperation('*')">×</button>
-      <button onclick="append('1')">1</button>
-      <button onclick="append('2')">2</button>
-      <button onclick="append('3')">3</button>
-      <button onclick="selectOperation('-')">-</button>
-      <button onclick="append('0')">0</button>
-      <button onclick="append('.')">.</button>
-      <button onclick="clearDisplay()">C</button>
-      <button onclick="selectOperation('+')">+</button>
-      <button class="equals" onclick="calculate()">=</button>
+      <!-- First row -->
+      <button id="clear-all">AC</button>
+      <button id="clear-entry">C</button>
+      <button id="percent">%</button>
+      <button class="operator" data-operator="/">÷</button>
+
+      <!-- Second row -->
+      <button data-number="7">7</button>
+      <button data-number="8">8</button>
+      <button data-number="9">9</button>
+      <button class="operator" data-operator="*">×</button>
+
+      <!-- Third row -->
+      <button data-number="4">4</button>
+      <button data-number="5">5</button>
+      <button data-number="6">6</button>
+      <button class="operator" data-operator="-">−</button>
+
+      <!-- Fourth row -->
+      <button data-number="1">1</button>
+      <button data-number="2">2</button>
+      <button data-number="3">3</button>
+      <button class="operator" data-operator="+">+</button>
+
+      <!-- Fifth row -->
+      <button data-number="0" style="grid-column: span 2;">0</button>
+      <button data-number=".">.</button>
+      <button class="equals" id="equals">=</button>
     </div>
   </div>
 
-  <script src="calculator.js"></script>
+  <script>
+    // Selectors
+    const display = document.getElementById('display');
+    const clearAllButton = document.getElementById('clear-all');
+    const clearEntryButton = document.getElementById('clear-entry');
+    const equalsButton = document.getElementById('equals');
+    const percentButton = document.getElementById('percent');
+    const numberButtons = document.querySelectorAll('[data-number]');
+    const operatorButtons = document.querySelectorAll('[data-operator]');
+
+    // Variables to store calculation state
+    let currentValue = '';
+    let previousValue = '';
+    let currentOperator = null;
+
+    // Function to update the display
+    function updateDisplay(value) {
+      display.innerText = value;
+    }
+
+    // Clear All
+    clearAllButton.addEventListener('click', () => {
+      currentValue = '';
+      previousValue = '';
+      currentOperator = null;
+      updateDisplay('0');
+    });
+
+    // Clear Entry
+    clearEntryButton.addEventListener('click', () => {
+      currentValue = '';
+      updateDisplay('0');
+    });
+
+    // Handle percentage
+    percentButton.addEventListener('click', () => {
+      if (!currentValue) return;
+      currentValue = (parseFloat(currentValue) / 100).toString();
+      updateDisplay(currentValue);
+    });
+
+    // Handle number button clicks
+    numberButtons.forEach(button => {
+      button.addEventListener('click', () => {
+        if (currentValue.includes('.') && button.dataset.number === '.') return; // Avoid multiple decimals
+        currentValue += button.dataset.number;
+        updateDisplay(currentValue);
+      });
+    });
+
+    // Handle operator button clicks
+    operatorButtons.forEach(button => {
+      button.addEventListener('click', () => {
+        if (currentValue === '') return;
+        if (previousValue !== '') calculate();
+        currentOperator = button.dataset.operator;
+        previousValue = currentValue;
+        currentValue = '';
+      });
+    });
+
+    // Equals button
+    equalsButton.addEventListener('click', () => {
+      if (!currentOperator || currentValue === '') return;
+      calculate();
+      currentOperator = null;
+    });
+
+    // Perform calculation
+    function calculate() {
+      let result;
+      const prev = parseFloat(previousValue);
+      const curr = parseFloat(currentValue);
+
+      if (isNaN(prev) || isNaN(curr)) return;
+
+      switch (currentOperator) {
+        case '+':
+          result = prev + curr;
+          break;
+        case '-':
+          result = prev - curr;
+          break;
+        case '*':
+          result = prev * curr;
+          break;
+        case '/':
+          result = curr === 0 ? 'Error' : prev / curr; // Prevent division by zero
+          break;
+        default:
+          return;
+      }
+
+      currentValue = result.toString();
+      previousValue = '';
+      updateDisplay(currentValue);
+    }
+  </script>
 </body>
 </html>
