Upload index.html via GitHub API

--- a/index.html
+++ b/index.html
@@ -3,36 +3,124 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calculator</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Basic Calculator</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background: #f3f3f3;
+    }
+
+    .calculator {
+      width: 300px;
+      padding: 20px;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    input#display {
+      width: 100%;
+      height: 50px;
+      font-size: 18px;
+      text-align: right;
+      margin-bottom: 15px;
+      padding: 5px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+    }
+
+    .buttons {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 10px;
+    }
+
+    .button {
+      padding: 15px;
+      font-size: 16px;
+      background-color: #f0f0f0;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      text-align: center;
+      cursor: pointer;
+      user-select: none;
+      transition: background-color 0.3s;
+    }
+
+    .button:hover {
+      background-color: #e0e0e0;
+    }
+
+    .clear {
+      background-color: #f44336;
+      color: white;
+    }
+
+    .clear:hover {
+      background-color: #d32f2f;
+    }
+
+    .equals {
+      background-color: #4caf50;
+      color: white;
+    }
+
+    .equals:hover {
+      background-color: #388e3c;
+    }
+  </style>
 </head>
 <body>
   <div class="calculator">
-    <div class="display">
-      <input type="text" id="calc-display" readonly />
-    </div>
+    <input type="text" id="display" disabled>
     <div class="buttons">
-      <button class="btn" onclick="appendNumber('7')">7</button>
-      <button class="btn" onclick="appendNumber('8')">8</button>
-      <button class="btn" onclick="appendNumber('9')">9</button>
-      <button class="btn operator" onclick="appendOperator('/')">/</button>
+      <div class="button" onclick="appendToDisplay('7')">7</div>
+      <div class="button" onclick="appendToDisplay('8')">8</div>
+      <div class="button" onclick="appendToDisplay('9')">9</div>
+      <div class="button" onclick="appendToDisplay('/')">/</div>
 
-      <button class="btn" onclick="appendNumber('4')">4</button>
-      <button class="btn" onclick="appendNumber('5')">5</button>
-      <button class="btn" onclick="appendNumber('6')">6</button>
-      <button class="btn operator" onclick="appendOperator('*')">*</button>
+      <div class="button" onclick="appendToDisplay('4')">4</div>
+      <div class="button" onclick="appendToDisplay('5')">5</div>
+      <div class="button" onclick="appendToDisplay('6')">6</div>
+      <div class="button" onclick="appendToDisplay('*')">*</div>
 
-      <button class="btn" onclick="appendNumber('1')">1</button>
-      <button class="btn" onclick="appendNumber('2')">2</button>
-      <button class="btn" onclick="appendNumber('3')">3</button>
-      <button class="btn operator" onclick="appendOperator('-')">-</button>
+      <div class="button" onclick="appendToDisplay('1')">1</div>
+      <div class="button" onclick="appendToDisplay('2')">2</div>
+      <div class="button" onclick="appendToDisplay('3')">3</div>
+      <div class="button" onclick="appendToDisplay('-')">-</div>
 
-      <button class="btn" onclick="appendNumber('0')">0</button>
-      <button class="btn" onclick="clearDisplay()">C</button>
-      <button class="btn" onclick="calculate()">=</button>
-      <button class="btn operator" onclick="appendOperator('+')">+</button>
+      <div class="button" onclick="appendToDisplay('0')">0</div>
+      <div class="button" onclick="appendToDisplay('.')">.</div>
+      <div class="button equals" onclick="calculateResult()">=</div>
+      <div class="button" onclick="appendToDisplay('+')">+</div>
+
+      <div class="button clear" onclick="clearDisplay()">C</div>
     </div>
   </div>
-  <script src="script.js"></script>
+
+  <script>
+    const display = document.getElementById('display');
+
+    function appendToDisplay(value) {
+      display.value += value;
+    }
+
+    function clearDisplay() {
+      display.value = '';
+    }
+
+    function calculateResult() {
+      try {
+        display.value = eval(display.value); // Caution: eval() can be dangerous
+      } catch (e) {
+        display.value = 'Error';
+      }
+    }
+  </script>
 </body>
 </html>
